<resources>
    <string name="app_name">ComputerClub</string>
    
    <string name="screen_signin_enter">Войти</string>
    <string name="screen_signin_email_hint">Почта</string>
    <string name="screen_signin_password_hint">Пароль</string>

    <string name="screen_signup_name_hint">Имя</string>
    <string name="screen_signup_birth_date">Дата рождения</string>
    <string name="screen_signup_email_hint">Почта</string>
    <string name="screen_signup_password_hint">Пароль</string>
    <string name="screen_signup_password_repeat_hint">Повторите пароль</string>
    <string name="screen_signup_register">Регистрация</string>

    <string name="screen_computer_search_hint">Поиск</string>
    <string name="screen_computer_empty_title">Компьютеры не найдены</string>
    <string name="screen_computer_empty_description">Проверьте подключение к интернету или ваш запрос</string>

    <string name="screen_basket_empty_title">Ваша корзина пуста</string>
    <string name="screen_basket_empty_description">Вы можете добавить их из раздeла \"магазин\"</string>
    <string name="screen_basket_title">Корзина</string>
    <string name="screen_basket_price">Цена: %1$d рублей</string>
    <string name="screen_basket_buy">Оплатить %1$d рублей</string>

    <string name="bottom_nav_shop">Магазин</string>
    <string name="bottom_nav_basket">Корзина</string>
    <string name="bottom_nav_profile">Профиль</string>

    <string name="dialog_computer_add">В корзину</string>
    <string name="dialog_computer_remove">Убрать из корзины</string>
    <string name="dialog_computer_price">Цена: %1$d рублей</string>

    <string name="screen_profile_title">Профиль</string>
    <string name="screen_profile_exit">Выйти</string>
    <string name="screen_profile_history">История покупок</string>
    <string name="screen_profile_history_empty_title">Ваша история покупок пуста</string>
    <string name="screen_profile_history_empty_description">Оплатите товары в корзине</string>

</resources>