<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MatchParent"
    android:paddingHorizontal="?attr/primary_padding_horizontal">

    <EditText
        android:id="@+id/name_edit"
        style="@style/EditText"
        android:hint="@string/screen_signup_name_hint"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/birthday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <LinearLayout
        android:id="@+id/birthday"
        style="@style/MatchParentWrapContent"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/name_edit"
        app:layout_constraintBottom_toTopOf="@id/email_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <TextView
            style="@style/Text"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/screen_signup_birth_date"/>

        <Button
            android:id="@+id/date_pick_btn"
            style="@style/Button.Active"
            android:layout_weight="1"
            android:text="11.11.1111"/>

    </LinearLayout>

    <EditText
        android:id="@+id/email_edit"
        style="@style/EditText"
        android:hint="@string/screen_signup_email_hint"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/birthday"
        app:layout_constraintBottom_toTopOf="@id/password_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/password_edit"
        style="@style/EditText"
        android:hint="@string/screen_signup_password_hint"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/email_edit"
        app:layout_constraintBottom_toTopOf="@id/password_repeat_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/password_repeat_edit"
        style="@style/EditText"
        android:hint="@string/screen_signup_password_repeat_hint"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/password_edit"
        app:layout_constraintBottom_toTopOf="@id/register_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/register_btn"
        style="@style/Button.Active"
        android:text="@string/screen_signup_register"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/password_repeat_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>