<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchParent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="?attr/primary_padding_horizontal">

    <EditText
        android:id="@+id/email_edit"
        style="@style/MatchParentWrapContent"
        android:hint="@string/screen_signin_email_hint"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/password_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/password_edit"
        style="@style/MatchParentWrapContent"
        android:hint="@string/screen_signin_password_hint"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/email_edit"
        app:layout_constraintBottom_toTopOf="@id/submit_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/submit_btn"
        style="@style/MatchParentWrapContent"
        android:text="@string/screen_signin_enter"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/password_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>