<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MatchParent">

    <TextView
        android:id="@+id/title"
        style="@style/Text.Title"
        android:layout_marginTop="20dp"
        android:text="@string/screen_profile_title"
        android:layout_marginHorizontal="?attr/primary_padding_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        style="@style/MatchParentWrapContent"
        android:id="@+id/user_info"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="?attr/primary_padding_horizontal"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/name"
            style="@style/Text"
            android:text="example name"/>

        <TextView
            android:id="@+id/email"
            style="@style/Text"
            android:text="example@email.com"/>

        <TextView
            android:id="@+id/birth_date"
            style="@style/Text"
            android:text="11.12.2013"/>

    </LinearLayout>

    <TextView
        android:id="@+id/history_title"
        style="@style/Text.Title"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/screen_profile_history"
        app:layout_constraintTop_toBottomOf="@id/user_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/history_recycler"
        style="@style/MatchParent0dp"
        android:layout_marginVertical="30dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/history_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/exit_button"/>

    <Button
        android:id="@+id/exit_button"
        style="@style/Button.Active"
        android:text="@string/screen_profile_exit"
        android:layout_marginHorizontal="?attr/primary_padding_horizontal"
        android:layout_marginVertical="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <include
        android:id="@+id/empty_layout"
        layout="@layout/empty_layout"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/history_recycler"
        app:layout_constraintBottom_toBottomOf="@id/exit_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>